# quakelight

./: flood.py  heartbeat_listen.py
.github/workflows/: build.yml
firmware/: CMakeLists.txt  Kconfig  prj.conf  west.yml
firmware/boards/: frdm_mcxn947_mcxn947_cpu0.overlay  rpi_pico_rp2040_w.conf  rpi_pico_rp2040_w.overlay  xiao_esp32c3.conf  xiao_esp32c3.overlay
firmware/boards/balto/quakelight/: Kconfig.defconfig  Kconfig.quakelight  board.cmake  board.yml  quakelight.dts  quakelight_defconfig
firmware/src/: blink.c  blink.h  keepalive.c  leds.c  main.c  msg_listener.c  net_led.c  temp.c  wifi_creds.c
hardware/: led_output.kicad_sch  quakelight.kicad_pcb  quakelight.kicad_pro  quakelight.kicad_sch
